# docs/swagger.json
@@ -215,6 +215,19 @@
                 ],
                 "responses": {}
             }
+        },
+        "/ollama/reset": {
+            "get": {
+                "description": "reset chat with Ollama model",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ollama"
+                ],
+                "summary": "Reset Chat with Ollama Model",
+                "responses": {}
+            }
         }
     },
     "definitions": {
